FIX 113416 Datetime-picker patch for vertical alignment in collection

--- a/skins/default/form.scss
+++ b/skins/default/form.scss
@@ -219,9 +219,13 @@ fieldset {
 						padding: 1px 5px 0 0;
 						white-space: nowrap;
 
-						input.dtp--date {
-							margin-top: -2px;
-							vertical-align: top;
+						> div.dtp--datetimepicker {
+							margin-right: -6px;
+
+							input.dtp--date {
+								margin-top: -2px;
+								vertical-align: top;
+							}
 						}
 
 						> input:not([type=file]),
